# mg-plus-uv-chain

./: .gitignore  CHARTER.md  CITATION.cff  CONVENTIONS.md  LICENSE  LICENSE-DOCS  LICENSES.md  Makefile  README.md  endorsement.md  pyproject.toml
LICENSES/: CC-BY-4.0.txt  CC-BY-NC-SA-4.0.txt  CC-BY-SA-4.0.txt  MIT.txt
constraints/: LICENSE.md  loss-budget.md  phase-noise-budget.md  raman-requirements.md
data/: README.md
data/lab notes/: 2020-11-vecsel-2-heidi.md  2021-07-vecsel-project-summary.md  2026-06-rnd-vecsel-channel-record.md
data/literature/: LICENSE.md
docs/: KD-2026-XXX-uv-280nm.md  LICENSE.md  _config.yml  calculations.md  hardware-status.md  index.md  principles.md  references.md  status.md
docs/_layouts/: default.html  notebook.html
docs/architectures/: bbo-coating-brief.md  bbo-coating-run.md  friedenauer-2006.md  ic-vecsel-alternative.md  index.md  next-gen.md  pulsed-raman-alternative.md  requirements.md
docs/assets/: SOURCE.md  notebook.css  site.css  tokens.css
docs/components/: friedenauer-baseline.md  home-built-doublers.md  inventory-2026-05-07.md  inventory.md  seed-lasers.md
docs/tutorials/: 01-shg-single-pass.html  01-shg-single-pass.ipynb  02-enhancement-cavity-buildup.html  02-enhancement-cavity-buildup.ipynb  03-optimal-input-coupler.html  03-optimal-input-coupler.ipynb  04-cascade-shg.html  04-cascade-shg.ipynb  index.md  vecsel-systems.md
logbook/: 2026-04-30-architecture-neutral-infrastructure.md  2026-04-30-kickoff.md  2026-05-01-gate-g3-closure.md  2026-05-04-bbo-alternative-references.md  2026-05-04-bbo-cw-uv-lidt-task.md  2026-05-07-numerics-expansion-workplan.md  2026-05-08-architecture-review-tightening-specs.md  2026-05-08-ic-vecsel-alternative-topology.md  2026-05-08-next-gen-500mW-workplan.md  2026-05-08-pulsed-raman-alternative-topology.md  2026-05-08-vecsel-seed-lasers.md  2026-05-09-council-3-trigger-task-split-success-criterion.md  2026-05-13-home-built-doublers-survey.md  2026-05-13-task-e-third-scout-pass.md  2026-06-26-repo-public-and-pages.md  2026-06-26-rnd-vecsel-extraction.md  2026-06-26-vecsel-systems-tutorial-and-labnotes.md  LICENSE.md
notebooks/: 2026-05-01-friedenauer-bk-recalculation.py
scripts/: render_tutorials.py
src/: __init__.py  abcd.py  boyd_kleinman.py  enhancement_cavity.py  parameters.py  shg_cascade.py  shg_single_pass.py
tests/: test_abcd.py  test_anti_seeding_src_imports.py  test_boyd_kleinman.py  test_diagnostic_surrogate_imports.py  test_enhancement_cavity.py  test_parameters.py  test_shg_cascade.py  test_shg_single_pass.py
(+76 files in other folders)
